Fix issue with z-index.

--- a/Gizmo.Client.UI/src/scss/themes/client/components/_image.scss
+++ b/Gizmo.Client.UI/src/scss/themes/client/components/_image.scss
@@ -47,7 +47,7 @@
       height: 100%;
       width: 100%;
       background-color: #161a1d;
-      z-index: 44;
+      z-index: 2;
       overflow: hidden;
       border-radius: 5px;
     }
@@ -81,7 +81,7 @@
         rgba(251, 251, 251, 0.05)
       );
       animation: gradientAnimation 1s infinite;
-      z-index: 45;
+      z-index: 3;
     }
   }
 }
